@startuml

title __SERVICE's Class Diagram__\n

  namespace br.com.apibancaria {
    namespace service {
      class br.com.apibancaria.service.AuthService {
          - encoder : PasswordEncoder
          + AuthService()
          + login()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace service {
      class br.com.apibancaria.service.ClienteService {
          - passwordEncoder : PasswordEncoder
          + ClienteService()
          + atualizarPorId()
          + buscarPorId()
          + cadastrar()
          + excluirPorId()
          + listar()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace service {
      class br.com.apibancaria.service.ContaService {
          + ContaService()
          + buscarPorId()
          + criarConta()
          + listar()
          - gerarNumeroConta()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace service {
      class br.com.apibancaria.service.PixService {
          + PixService()
          + cadastrar()
          + excluir()
          + listar()
          + transferir()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace service {
      class br.com.apibancaria.service.TransacaoService {
          + TransacaoService()
          + depositar()
          + extrato()
          + sacar()
      }
    }
  }
  

  br.com.apibancaria.service.AuthService o-- br.com.apibancaria.repository.ClienteRepository : clienteRepository
  br.com.apibancaria.service.AuthService o-- br.com.apibancaria.security.JwtService : jwtService
  br.com.apibancaria.service.ClienteService o-- br.com.apibancaria.repository.ClienteRepository : clienteRepository
  br.com.apibancaria.service.ClienteService o-- br.com.apibancaria.service.ContaService : contaService
  br.com.apibancaria.service.ContaService o-- br.com.apibancaria.repository.ContaRepository : contaRepository
  br.com.apibancaria.service.PixService o-- br.com.apibancaria.repository.ChavePixRepository : chavePixRepository
  br.com.apibancaria.service.PixService o-- br.com.apibancaria.repository.ContaRepository : contaRepository
  br.com.apibancaria.service.PixService o-- br.com.apibancaria.repository.TransacaoRepository : transacaoRepository
  br.com.apibancaria.service.TransacaoService o-- br.com.apibancaria.repository.ContaRepository : contaRepository
  br.com.apibancaria.service.TransacaoService o-- br.com.apibancaria.repository.TransacaoRepository : transacaoRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
